v1.1.0/modules/schema/pages/enumeration/SynchronousMachineModelKind.adoc
= `SynchronousMachineModelKind`
:toclevels: 4


+++Type of synchronous machine model used in dynamic simulation applications.+++


[cols="h,3",width=65%]
|===
| Type
| Enumeration

| URI
| `cim:SynchronousMachineModelKind`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Values

[cols="1,1,5",width=100%]
|===
| Value | URI | Description

| `subtransient`
| `cim:SynchronousMachineModelKind.subtransient`
| n/a

| `subtransientSimplified`
| `cim:SynchronousMachineModelKind.subtransientSimplified`
| n/a

| `subtransientSimplifiedDirectAxis`
| `cim:SynchronousMachineModelKind.subtransientSimplifiedDirectAxis`
| n/a

| `subtransientTypeF`
| `cim:SynchronousMachineModelKind.subtransientTypeF`
| n/a

| `subtransientTypeJ`
| `cim:SynchronousMachineModelKind.subtransientTypeJ`
| n/a
|===

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/SynchronousMachineTimeConstantReactance.adoc[`SynchronousMachineTimeConstantReactance`] | xref::class/SynchronousMachineTimeConstantReactance.adoc#modelType[`modelType`]


|===

